<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="20dp"
    android:clipToPadding="false"
    android:background="@color/almond">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="40dp"
        android:background="@color/almond">
        <TextView
            android:id="@+id/dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DASHBOARD"
            android:textSize="28sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/buttons"
            app:layout_constraintTop_toBottomOf="@id/dashboard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <Button
                android:id="@+id/addBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addProduct"
                android:textSize="16sp"
                android:backgroundTint="@color/green"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="60dp" />

            <Button
                android:id="@+id/listProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listProducts"
                android:textSize="16sp"
                android:backgroundTint="@color/green"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="40dp" />

            <Button
                android:id="@+id/deleteProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deleteProduct"
                android:textSize="16sp"
                android:backgroundTint="@color/green"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
