<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/green"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/coffee_image"
            android:layout_width="0dp"
            android:layout_height="750dp"
            android:scaleType="centerCrop"
            android:src="@drawable/coffee"
            app:layout_constraintBottom_toTopOf="@+id/topProductsCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/coffee_image"
            app:layout_constraintBottom_toBottomOf="@id/coffee_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:cardCornerRadius="50dp"
            app:cardElevation="4dp"
            android:layout_margin="8dp">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/coffee_shop_logo"
                android:gravity="center" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/homepage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homepage"
            android:textAlignment="center"
            android:textColor="@color/almond"
            android:textSize="32sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/logoImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homepage2"
            android:textAlignment="center"
            android:textColor="@color/almond"
            android:textSize="24sp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/homepage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/shop_now_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Shop now"
            android:backgroundTint="@color/green"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingTop="20dp"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toTopOf="@id/coffee_image"
            app:layout_constraintBottom_toBottomOf="@id/coffee_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.75"
            android:clickable="true"
            android:focusable="true" />

        <androidx.cardview.widget.CardView
            android:id="@+id/topProductsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/coffee_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/topProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/topProducts"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_topProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
